[Frotnend] Fix layout bugs

--- a/src/static/room.css
+++ b/src/static/room.css
@@ -226,12 +226,22 @@ body {
 
 .throbber {
   display: none;
+  position: relative;
   width: 1.2em;
   height: 1.2em;
+  margin: -2px 0;
+  padding: 2px;
   vertical-align: bottom;
 }
 .throbber.visible {
   display: inline-block;
+}
+.throbber img {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .room-name, a.room-name {
@@ -247,7 +257,7 @@ body {
   display: inline-block;
   width: 1.2em;
   height: 1.2em;
-  margin-bottom: -2px;
+  margin: -2px 0;
   padding: 1px;
   border: 1px solid black;
   border-radius: 50%;
@@ -291,7 +301,7 @@ body {
 .settings-content {
   display: none;
   position: absolute;
-  top: 0;
+  top: -2px;
   right: 0;
   border: 1px solid black;
   padding: 5px;
